# mochicards

./: README.md  pyproject.toml
mochicards/: __init__.py  client.py  errors.py  models.py
tests/: conftest.py  test_mochi_client.py
