[tool.poetry]
name = "mochicards"
version = "0.1.0"
description = "A Python SDK for the Mochi API"
authors = ["Gabriel Simmons"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28"
pydantic = "^1.10"
pytest = "^7.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.11.0"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"